--- a/index.html
+++ b/index.html
@@ -6,13 +6,23 @@
 	<meta name="format-detection" content="telephone=no">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>first-project-lp</title>
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
-	  crossorigin="anonymous">
-	<link rel="stylesheet" href="css/et-line.css">
-	<link rel="stylesheet" href="owlcarousel/owl.carousel.min.css">
+	<!-- Google fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Dosis:300,400" rel="stylesheet">
+
+	<!-- Font awesome -->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+
+	<!-- Font et-line -->
+	<link rel="stylesheet" href="css/et-line.css">
+
+	<!-- owl-carousel -->
+	<link rel="stylesheet" href="css/owl.carousel.min.css">
+
+	<!--  Reset styles-->
 	<link rel="stylesheet" href="css/reset.css">
+
+	<!-- Custom styles -->
 	<link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -37,7 +47,7 @@
 		<!-- main start-->
 		<main>
 			<!-- section-1 start -->
-			<section class="section-1 section-md">
+			<section class="section-1 section-md text-center">
 				<div class="container">
 					<h1>Thomas Rhythm</h1>
 					<p>Extraordinary art director &amp; creative minimalism lover</p>
@@ -45,10 +55,11 @@
 				</div>
 			</section>
 			<!-- /section-1 end -->
+
 			<!--  line-bottom start -->
 			<section class="standart-section line-bottom">
 				<div class="container">
-					<h2 class="title-bottom">About studio</h2>
+					<h2 class="title">About studio</h2>
 					<div class="row clearfix">
 						<div class="col-4">
 							<blockquote>
@@ -58,73 +69,78 @@
 						</div>
 						<div class="col-4">
 							<div>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In maximus ligula semper metus pellentesque mattis. Maecenas
-									volutpat, diam enim sagittis quam, id porta quam. Sed id dolor consectetur fermentum nibh volutpat, accumsan purus.</p>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In maximus ligula semper metus pellentesque mattis. Maecenas volutpat, diam enim sagittis quam, id porta quam. Sed id dolor consectetur fermentum nibh volutpat, accumsan purus.</p>
 							</div>
 						</div>
 						<div class="col-4">
 							<div>
-								<p>Etiam sit amet fringilla lacus. Pellentesque suscipit ante at ullamcorper pulvinar neque porttitor. Integer lectus.
-									Praesent sed nisi eleifend, fermentum orci amet, iaculis libero. Donec vel ultricies purus. Nam dictum sem, eu aliquam
-									ipsum.</p>
+								<p>Etiam sit amet fringilla lacus. Pellentesque suscipit ante at ullamcorper pulvinar neque porttitor. Integer lectus. Praesent sed nisi eleifend, fermentum orci amet, iaculis libero. Donec vel ultricies purus. Nam dictum sem, eu aliquam ipsum.</p>
 							</div>
 						</div>
 					</div>
 					<div class="row clearfix">
 						<div class="col-4">
-							<figure>
+							<figure class="text-center">
 								<img src="img/team-1.jpg" alt="Thomas Rhythm">
-								<figcaption class="text-center">Thomas Rhythm<span>Art Director</span></figcaption>
+								<figcaption>Thomas Rhythm<span>Art Director</span></figcaption>
 							</figure>
 						</div>
 						<div class="col-4">
-							<figure>
+							<figure class="text-center">
 								<img src="img/team-2.jpg" alt="Marta Laning">
-								<figcaption class="text-center">Marta Laning<span>Web engineer</span></figcaption>
+								<figcaption>Marta Laning<span>Web engineer</span></figcaption>
 							</figure>
 						</div>
 						<div class="col-4">
-							<figure>
+							<figure class="text-center">
 								<img src="img/team-3.jpg" alt="Steve Anders">
-								<figcaption class="text-center">Steve Anders<span>Developer</span></figcaption>
+								<figcaption>Steve Anders<span>Developer</span></figcaption>
 							</figure>
 						</div>
 					</div>
 				</div>
 			</section>
 			<!-- /line-bottom end-->
+
 			<!--  standart-center start -->
 			<section class="standart-section section-center">
 				<div class="container">
-					<h2 class="title-center text-center">Services</h2>
+					<h2 class="text-center">Services</h2>
 					<div class="row">
 						<div class="col-5">
-							<a href="#" class="icon-col-5">
+							<div class="text-center">
+								<a href="#" class="icon-center">
                 <span class="icon-strategy"></span>
-                <p class="heading">Branding</p></a>
+                <h3>Branding</h3></a>
+							</div>
 						</div>
 						<div class="col-5">
-							<a href="#" class="icon-col-5">
+							<div class="text-center">
+								<a href="#" class="icon-center">
                 <span class="icon-desktop"></span>
-                <p class="heading">Web Design</p></a>
+                <h3>Web Design</h3></a>
+							</div>
 						</div>
 						<div class="col-5">
-							<a href="#" class="icon-col-5">
+							<div class="text-center">
+								<a href="#" class="icon-center">
                 <span class="icon-tools"></span>
-                <p class="heading">Graphic Design</p>
-              </a>
+                <h3>Graphic Design</h3></a>
+							</div>
 						</div>
 						<div class="col-5">
-							<a href="#" class="icon-col-5">
+							<div class="text-center">
+								<a href="#" class="icon-center">
                 <span class="icon-gears"></span>
-                <p class="heading">Development</p>
-              </a>
+                <h3>Development</h3></a>
+							</div>
 						</div>
 						<div class="col-5">
-							<a href="#" class="icon-col-5">
+							<div class="text-center">
+								<a href="#" class="icon-center">
                 <span class="icon-camera"></span>
-                <p class="heading">Photography</p>
-              </a>
+                <h3>Photography</h3></a>
+							</div>
 						</div>
 					</div>
 					<div class="row clearfix">
@@ -137,29 +153,27 @@
 						</div>
 						<div class="col-4">
 							<div>
-								<p>Maecenas volutpat, diam enim sagittis quam, id porta quam. Sed id dolor consectetur fermentum volutpat nibh, accumsan
-									purus. Lorem ipsum dolor sit semper amet, consectetur adipiscing elit. In maximus ligula metus pellentesque mattis.</p>
+								<p>Maecenas volutpat, diam enim sagittis quam, id porta quam. Sed id dolor consectetur fermentum volutpat nibh, accumsan purus. Lorem ipsum dolor sit semper amet, consectetur adipiscing elit. In maximus ligula metus pellentesque mattis.</p>
 							</div>
 						</div>
 						<div class="col-4">
 							<div>
-								<p>Donec vel ultricies purus. Nam dictum sem, ipsum aliquam . Etiam sit amet fringilla lacus. Pellentesque suscipit
-									ante at ullamcorper pulvinar neque porttitor. Integer lectus. Praesent sed nisi eleifend, fermentum orci amet, iaculis
-									libero.</p>
+								<p>Donec vel ultricies purus. Nam dictum sem, ipsum aliquam . Etiam sit amet fringilla lacus. Pellentesque suscipit ante at ullamcorper pulvinar neque porttitor. Integer lectus. Praesent sed nisi eleifend, fermentum orci amet, iaculis libero.</p>
 							</div>
 						</div>
 					</div>
 				</div>
 			</section>
-			<!--  standart-center end -->
-			<!--section-dark start-->
-			<section class="section-2 section-dark invert">
+			<!--  section-center end -->
+
+			<!--section-dark iMack start-->
+			<section class="section-2 section-imack bg-dark invert">
 				<div class="container">
 					<div class="row clearfix">
 						<div class="col-6">
-							<h2 class="title-dark">Looking for exclusive digital services?</h2>
-							<p>Proin fringilla augue at maximus vestibulum. Nam pulvinar vitae neque et porttitor. Integer non dapibus diam, ac eleifend
-								lectus.</p>
+							<h2>Looking for exclusive digital services?</h2>
+							<p>Proin fringilla augue at maximus vestibulum. Nam pulvinar vitae neque et porttitor. Integer non dapibus diam, ac eleifend lectus.
+							</p>
 							<a href="#" class="btn">Lets talk</a>
 						</div>
 						<div class="col-6">
@@ -173,15 +187,17 @@
 					</div>
 				</div>
 			</section>
-			<!--			/section-dark-->
-			<!--  isotope  -->
-			<section class="section-3">
-				<div class="text-center">
-					<h2 class="title-center">Portfolio</h2>
-					<p>In auctor ex id urna faucibus porttitor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In maximus ligula
-						semper metus pellentesque mattis. Maecenas volutpat, diam enim sagittis quam, id porta quam. Sed id dolor consectetur
-						fermentum nibh volutpat, accumsan purus.</p>
+			<!--			/section-dark iMack end-->
+
+			<!--	section-3 start -->
+			<section class="standart-section section-3">
+				<div class="container">
+					<div class="text-center">
+						<h2>Portfolio</h2>
+						<p>In auctor ex id urna faucibus porttitor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In maximus ligula semper metus pellentesque mattis. Maecenas volutpat, diam enim sagittis quam, id porta quam. Sed id dolor consectetur fermentum nibh volutpat, accumsan purus.</p>
+					</div>
 				</div>
+				<!--  isotope start  -->
 				<div class="button-group filter-button-group text-center">
 					<button class="button is-checked" data-filter="*">All works</button>
 					<button class="button" data-filter=".branding">branding</button>
@@ -197,15 +213,70 @@
 					<div class="grid-item photography"><img src="img/work-6.jpg" alt="projects"></div>
 				</div>
 			</section>
-			<!--			owl-carousel https://owlcarousel2.github.io/OwlCarousel2/docs/started-welcome.html-->
-			<section class="section-2 section-dark invert text-center">
+			<!-- section-dark isotope end  -->
+
+			<!--		section-dark	start -->
+			<section class="section-dark bg-dark invert text-center">
+				<h2 class="text-center">Like Our Creative Works?</h2>
+				<a href="#" class="btn">Start Project</a>
+			</section>
+			<!--			/section-dark end -->
+
+			<!--			benefit start-->
+			<section class="standart-section benefit">
+				<div class="container">
+					<h2 class="text-center">Why Choose Us?</h2>
+					<div class="row clearfix">
+						<div class="col-4">
+							<div class="text-center">
+								<a href="#" class="icon-center">
+               		<span class="icon-flag"></span>
+                	<h3>We’re Creative</h3>
+                </a>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In maximus ligula semper metus pellentesque mattis. Maecenas volutpat, diam enim.</p>
+								<a href="#" class="icon-center">
+                <span class="icon-heart"></span>
+                <h3>We’re Creative</h3></a>
+								<p>Cras luctus interdum sodales. Quisque quis odio dui. Sedes sit amet neque malesuada, lobortis commodo magna ntesque pharetra metus vivera sagittis.</p>
+							</div>
+						</div>
+						<div class="col-4">
+							<div class="text-center">
+								<a href="#" class="icon-center">
+                <span class="icon-clock"></span>
+                <h3>We’re Creative</h3></a>
+								<p>Proin fringilla augue at maximus vestibulum. Nam pulvinar vitae neque et porttitor. Praesent sed nisi eleifend, lorem fermentum orci sit amet, iaculis libero.</p>
+								<a href="#" class="icon-center">
+                <span class="icon-linegraph"></span>
+                <h3>We’re Creative</h3></a>
+								<p>Fusce aliquet quam eget neque ultrices elementum. Nulla posuere felis id arcu blandit sagittis. Eleifend vestibulum purus, sit amet vulputate risus tristique non.</p>
+							</div>
+						</div>
+						<div class="col-4">
+							<div class="text-center">
+								<a href="#" class="icon-center">
+                <span class="icon-hotairballoon"></span>
+                <h3>We’re Creative</h3></a>
+								<p>Curabitur iaculis accumsan augue, nec finibus mauris pretium eu. Duis placerat ex gravida nibh tristique porta. Nulla facilisi. Suspendisse ultricies eros blandit.</p>
+								<a href="#" class="icon-center">
+                <span class="icon-chat"></span>
+                <h3>We’re Creative</h3></a>
+								<p>Pulvinar vitae neque et porttitor. Integer non dapibus diam, ac eleifend lectus. Praesent sed nisi eleifend, fermentum orci sit amet, iaculis libero interdum.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!--benefit end-->
+
+			<!--		section-2	owl-carousel start -->
+			<section class="section-2 carousel bg-dark invert text-center">
 				<div class="owl-carousel">
-					<div class="owl-item-inner">
+					<div class="owl-item-inner mx-auto">
 						<span class="icon-quote"></span>
 						<h2>What people say?</h2>
 						<blockquote>
-							<q>Phasellus luctus commodo ullamcorper a posuere rhoncus commodo elit. Aenean congue,
-					risus utaliquam dapibus. Thanks!</q>
+							<q>Phasellus luctus commodo ullamcorper a posuere rhoncus commodo elit. Aenean congue, risus utaliquam dapibus. Thanks!</q>
 							<cite>&mdash; John Doe, doodle inc.</cite>
 						</blockquote>
 					</div>
@@ -238,16 +309,60 @@
 					</div>
 				</div>
 			</section>
+			<!--		section-dark	owl-carousel end -->
+			<sectiion>
+				<div id="map"></div>
+			</sectiion>
 		</main>
-
 		<!-- /main end-->
+
+<!--
+		<footer>
+			<div class="text-center">
+				<a href="index.html" class="mx-auto"><img src="img/logo-ftr.png" alt="logo-page"></a>
+				<div class="social-icon">
+					<a href="#"><i class="fab fa-facebook-f"></i></a>
+				</div>
+				<div class="social-icon">
+					<a href="#"><i class="fab fa-twitter"></i></a>
+				</div>
+				<div class="social-icon">
+					<a href="#"><i class="fab fa-behance"></i></a>
+				</div>
+				<div class="social-icon">
+					<a href="#"><i class="fab fa-linkedin-in"></i></a>
+				</div>
+				<div class="social-icon">
+					<a href="#"><i class="fab fa-pinterest-p"></i></a>
+				</div>
+			</div>
+			<div class="copywriting">
+				<span>&copy; Rhythm 2014</span>
+				<span>Made with love for great people</span>
+			</div>
 	</div>
+	</footer>
+-->
+
+	</div>
+	<!-- /.page -->
+
+	<div class="totop-button"></div>
+	<!-- /.totop-button -->
 	<!--    jquery  -->
 	<script src="js/jquery-3.3.1.min.js"></script>
+
 	<!--  isotope  -->
 	<script src="js/isotope.pkgd.min.js"></script>
+
 	<!-- owl-carousel -->
 	<script src="js/owl.carousel.min.js"></script>
+
+	<!--	google map-->
+	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC5yYXZBdGvkYh3ZHicp5pWgN1JADPAvpM=initMap">
+
+
+	</script>
 	<!-- site scripts-->
 	<script src="js/scripts.js"></script>
 </body>
